fix on mobile still videos

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $large-screen: 1490px;
 $medium-screen: 1200px;
-$small-screen: 860px;
+$small-screen: 760px;
 $ultra-small-screen: 500px;
 
 
